Bootstrapped testing infrastructure